update item loss